# ReSet

./: .gitignore  Cargo.toml  PKGBUILD  README.md  ReSet.desktop  build.rs  flake.nix  release.yml  reset-0-0-x86_64.pkg.tar.zst  reset.desktop  shell.nix  wifi_box.rs
.direnv/: flake-profile  flake-profile-1-link  flake-profile-11-link  flake-profile-2-link  flake-profile-4-link
.github/workflows/: release-arch.yml  release.yml  rust.yml
assets/: reset_bluetooth.png~  reset_wifi.png~
better_test_plugin/: Cargo.toml
better_test_plugin/src/: lib.rs
debian/DEBIAN/: control  postinstall
flatpak/: README.md  build.sh  cargo-sources.json  flatpak-generator.py  generated-sources.json  org.Xetibo.ReSet-debug.json  org.Xetibo.ReSet-release.json  org.Xetibo.ReSet.desktop  org.Xetibo.ReSet.json  org.Xetibo.ReSet.json.wip  org.xetibo.ReSet.desktop  org.xetibo.ReSet.json
nix/: default.nix  hm.nix
src/: main.rs  tests.rs
src/audio/: audioBox.rs  audioSource.rs  mod.rs
src/bluetooth/: bluetoothBox.rs
src/components/: mod.rs  utils.rs
src/components/audio/: audioBox.rs  audioBoxImpl.rs  audioSource.rs  audioSourceImpl.rs  audio_box_handlers.rs  audio_box_utils.rs  audio_const.rs  audio_entry.rs  audio_functions.rs  audio_utils.rs  generic_audio_box_handlers.rs  generic_audio_box_utils.rs  generic_audio_functions.rs  mod.rs  (+3 more)
src/resources/: resetAudio.ui  resetAudioInput.ui  resetAudioOutput.ui  resetAudioSourceEntry.ui  resetBluetooth.ui  resetBluetoothEntry.ui  resetBreadcrumb.ui  resetBreadcrumbItem.ui  resetCardEntry.ui  resetCards.ui  resetError.ui  resetInputStreamEntry.ui  resetListBoxRow.ui  resetMainWindow.ui  resetMenu.ui  resetMicSourceEntry.ui  resetMicrophone.ui  resetOutpuStreamEntry.ui  resetOutputStreamEntry.ui  resetPasswordPopup.ui  resetPopup.ui  resetSavedWifiEntry.ui  resetSettingBox.ui  resetShortcuts.ui  resetSidebarEntry.ui  resetSinkEntry.ui  resetSourceEntry.ui  resetUI.cmb  resetWiFi.ui  resetWifiAddressEntry.ui  resetWifiEntry.ui  resetWifiOptions.ui  resetWifiRouteEntry.ui  resources.gresource.xml
src/wifi/: mod.rs  wifiBox.rs  wifiEntry.rs
src/window/: handleSidebarClick.rs  imp.rs  mod.rs  sidebarEntry.rs  window.rs
test_plugin/: Cargo.toml
test_plugin/src/: lib.rs
(+142 files in other folders)
