[package]
name = "reset"
version = "0.1.1"
edition = "2021"
description = "A wip universal Linux settings application."
repository = "https://github.com/Xetibo/ReSet"
license = "GPL-3.0-only"

[dependencies]
reset_daemon = "0.5.2"
re_set-lib = "0.7.9"
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
dbus = "0.9.7"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
glib = "0.18.3"
tokio = { version = "1.33.0", features = [
  "rt",
  "time",
  "net",
  "macros",
  "rt-multi-thread",
  "sync",
] }
fork = "0.1.22"
ipnetwork = "0.20.0"

[build-dependencies]
glib-build-tools = "0.18.0"
