[package]
name = "reset"
version = "1.0.0"
edition = "2021"
description = "A wip universal Linux settings application."
repository = "https://github.com/Xetibo/ReSet"
license = "GPL-3.0-only"

[dependencies]
reset_daemon = "1.0.1"
re_set-lib = "2.0.0"
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
dbus = "0.9.7"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
glib = "0.19.2"
tokio = { version = "1.36.0", features = [
  "rt",
  "time",
  "net",
  "macros",
  "rt-multi-thread",
  "sync",
] }
fork = "0.1.22"
ipnetwork = "0.20.0"

[build-dependencies]
glib-build-tools = "0.19.0"
